# dsync

./: .pre-commit-config.yaml  README.md  setup.cfg
src/dsync/: __init__.py  dry_run.py  models.py  query.py  run.py  transfer.py
