[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[bumpversion:file:src/dsync/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = dsync
version = attr: dsync.__version__
author = Michiel Cottaar
author_email = MichielCottaar@pm.me
description = syncing data across multiple machines (ssh) and backups
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MichielCottaar/dsync
project_urls =
    Bug Tracker = https://github.com/MichielCottaar/dsync/-/issues
    Documentation = https://open.win.ox.ac.uk/pages/MichielCottaar/dsync
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    sqlalchemy

[options.packages.find]
where = src
exclude =
    tests*
    *.egg-info

[options.entry_points]
console_scripts =
    dsync = dsync.run:cli
